# aplink.contracts

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-shell.sh  build.sh  unittest.sh  upload.sh
aplink.farm/ricardian/: aplink.farm.contracts.md.in
aplink.farm/src/: aplink.farm.cpp
contracts/: CMakeLists.txt
contracts/activate/: CMakeLists.txt
contracts/activate/include/activate/: activate.hpp
contracts/activate/src/: activate.cpp
contracts/aplink.conf/: CMakeLists.txt
contracts/aplink.conf/include/: wasm_db.hpp
contracts/aplink.conf/include/aplink.conf/: aplink.conf.db.hpp  aplink.conf.hpp
contracts/aplink.conf/ricardian/: aplink.conf.contracts.md.in
contracts/aplink.conf/src/: aplink.conf.cpp
contracts/aplink.event/: CMakeLists.txt
contracts/aplink.event/include/aplink.event/: aplink.event.db.hpp  aplink.event.hpp
contracts/aplink.event/src/: aplink.event.cpp
contracts/aplink.farm/: CMakeLists.txt
contracts/aplink.farm/include/: aplink.farm.hpp  aplink.farmdb.hpp  utils.hpp
contracts/aplink.farm/include/aplink.farm/: aplink.farm.hpp  aplink.farmdb.hpp
contracts/aplink.farm/ricardian/: aplink.farm.contracts.md.in
contracts/aplink.farm/src/: aplink.farm.cpp
contracts/aplink.newbie/: CMakeLists.txt
contracts/aplink.newbie/include/: aplink.farm.hpp  utils.hpp
contracts/aplink.newbie/include/amax.token/: amax.token.hpp
contracts/aplink.newbie/include/aplink.newbie/: aplink.newbie.db.hpp  aplink.newbie.hpp
contracts/aplink.newbie/include/eosio.token/: eosio.token.hpp
contracts/aplink.newbie/src/: aplink.newbie.cpp
contracts/aplink.stake/: CMakeLists.txt
contracts/aplink.stake/include/stake/: stake.hpp  stake_states.hpp  wasm_db.hpp
contracts/aplink.stake/ricardian/: stake.contracts.md.in
contracts/aplink.stake/src/: stake.cpp
contracts/aplink.token/: CMakeLists.txt
contracts/aplink.token/include/: aplink.newbie.hpp
contracts/aplink.token/include/amax.token/: amax.token.hpp
contracts/aplink.token/include/aplink.token/: aplink.token.hpp  safemath.hpp  utils.hpp
contracts/aplink.token/src/: aplink.token.cpp
contracts/apollo.token/: CMakeLists.txt
contracts/apollo.token/include/: wasm_db.hpp
contracts/apollo.token/include/apollo.token/: apollo.token.db.hpp  apollo.token.hpp
contracts/apollo.token/src/: apollo.token.cpp
contracts/bibi.user/: CMakeLists.txt
contracts/bibi.user/include/: math.hpp  utils.hpp
contracts/bibi.user/include/user/: bibi.user.hpp  bibiuser.hpp  bibiuser_db.hpp
contracts/bibi.user/src/: bibi.user.cpp  bibiuser.cpp
contracts/nftone.blindbox/: CMakeLists.txt
contracts/nftone.blindbox/include/: nftone.blindbox.hpp  nftone.blindbox_db.hpp
contracts/nftone.blindbox/include/amax.ntoken/: amax.ntoken_db.hpp
contracts/nftone.blindbox/src/: nftone.blindbox.cpp
contracts/otc.settle/: CMakeLists.txt
contracts/otc.settle/include/: otc.settle.hpp  otc.settledb.hpp  utils.hpp
contracts/otc.settle/include/aplink.farm/: aplink.farm.hpp
contracts/otc.settle/include/eosio.token/: eosio.token.hpp
contracts/otc.settle/include/otcswap/: otcswap.hpp
contracts/otc.settle/src/: otc.settle.cpp
contracts/otcbook/: CMakeLists.txt
contracts/otcbook/include/aplink.farm/: aplink.farm.hpp
contracts/otcbook/include/otc.settle/: otc.settle.hpp
contracts/otcbook/include/otcbook/: otcbook.hpp  otcbook_states.hpp  utils.h  utils.hpp  wasm_db.hpp
contracts/otcbook/ricardian/: mgp.otcstore.clauses.md  mgp.otcstore.contracts.md.in  otcbook.clauses.md.in  otcbook.contracts.md.in
contracts/otcbook/src/: Untitled-1  main.sol  otcbook.cpp
contracts/otcconf/: CMakeLists.txt
contracts/otcconf/include/eosio.token/: eosio.token.hpp
contracts/otcconf/include/otcconf/: otcconf.hpp  otcconf_states.hpp  utils.h  utils.hpp
contracts/otcconf/ricardian/: otcconf.clauses.md  otcconf.clauses.md.in  otcconf.contracts.md.in
contracts/otcconf/src/: otcconf.cpp
contracts/otcsettle/: CMakeLists.txt
contracts/otcsettle/include/: otcsettle.hpp  otcsettledb.hpp
contracts/otcsettle/ricardian/: otcsettle.contracts.md.in
contracts/otcsettle/src/: otcsettle.cpp
contracts/otcswap/: CMakeLists.txt
contracts/otcswap/include/: otcswap.hpp  otcswapdb.hpp
contracts/otcswap/include/otcswap/: otcswap.hpp  otcswapdb.hpp  utils.hpp  wasm_db.hpp
contracts/otcswap/ricardian/: otcswap.contracts.md.in
contracts/otcswap/src/: otcswap.cpp
contracts/rewardnewbie/: CMakeLists.txt
contracts/rewardnewbie/include/rewardnewbie/: rewardnewbie.hpp  rewardnewbie_db.hpp
contracts/rewardnewbie/src/: rewardnewbie.cpp
contracts/swapdex/: CMakeLists.txt
contracts/verso.swap/: CMakeLists.txt
contracts/verso.swap/include/: verso.swap.hpp  verso.swap_db.hpp
contracts/verso.swap/include/amax.ntoken/: amax.ntoken.hpp
contracts/verso.swap/include/commons/: utils.hpp
contracts/verso.swap/src/: verso.swap.cpp
contracts/xdaostg/: CMakeLists.txt
contracts/xdaostg/include/aplink.token/: aplink.token.hpp
contracts/xdaostg/include/xdaostg/: xdaostg.hpp  xdaostgdb.hpp
contracts/xdaostg/ricardian/: xdaostg.contracts.md.in
contracts/xdaostg/src/: xdaostg.cpp
scripts/: .environment  helper.sh  setleases.sh
scripts/deploy/: 01-unlock.sh  1-createaccount.sh  10-createaccount.sh  2-sendcontractfile.sh  20-buildcontract.sh  20-sendcontractfile.sh  22-scpfile.sh  3-createcontract.sh  30-createcontract.sh  4-upgradecontract.sh  40-upgradecontract.sh  5-initcontract.sh  50-initcontract.sh  51-initconfcontract.sh  55-initotccontract.sh  6-initdata.sh  60-remote-initdata.sh  70-initdata.sh  71-setContractAdmin.sh  75-initmerchantStatus.sh  80-test-script.sh  81-test-local.sh  81-test-script-local.sh  deploy-rewardnewbie.sh  deploy_contract.sh  test.sh
tests/: CMakeLists.txt
version/: ContractVersion.cmake.in  VersionUtils.cmake
